Implemented file download for documents and invoices
Implemented download REST APIs for documents and invoices.  Modified Swagger
spec to make URL names consistent with /extract/download.  Added call to
download files from S3 and refactored StorageConnection interface to handle
document locators in a consistent fashion.  Added matching download commands
to svc-client.
