# services/goldfin-admin-server/src/gen/java/io/goldfin/admin/service/api/service/InvoiceApiService.java
@@ -5,8 +5,8 @@ import io.goldfin.admin.service.api.model.*;
 
 import org.glassfish.jersey.media.multipart.FormDataContentDisposition;
 
+import java.io.File;
 import io.goldfin.admin.service.api.model.Invoice;
-import io.goldfin.admin.service.api.model.InvoiceParameters;
 import io.goldfin.admin.service.api.model.InvoiceValidationResult;
 
 import java.util.List;
@@ -20,8 +20,8 @@ import javax.validation.constraints.*;
 
 public abstract class InvoiceApiService {
     public abstract Response invoiceDelete(String id,SecurityContext securityContext) throws NotFoundException;
+    public abstract Response invoiceDownload(String id,SecurityContext securityContext) throws NotFoundException;
     public abstract Response invoiceShow(String id, Boolean full,SecurityContext securityContext) throws NotFoundException;
     public abstract Response invoiceShowAll( Boolean full,SecurityContext securityContext) throws NotFoundException;
-    public abstract Response invoiceUpdate(String id,InvoiceParameters body,SecurityContext securityContext) throws NotFoundException;
     public abstract Response invoiceValidate(String id, Boolean onlyFailing,SecurityContext securityContext) throws NotFoundException;
 }
